<resources>
    <string name="app_name">Beers</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="registration">Registration</string>
    <string name="log_screen_text">If you don\'t go to the bar, the bar goes to you!</string>
    <string name="log_in">Log in</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="save_user_data">Save</string>
    <string name="suggestions">Suggestions</string>
    <string name="orders">Orders</string>
    <string name="account">Account</string>
    <string name="buy">Buy</string>
    <string name="email">E-mail</string>
    <string name="witbier">E-mail</string>
</resources>