<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/login_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logo_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/loginTextField"
            android:src="@drawable/logo_screen"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/loginTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textColorHint="@color/black"
            android:maxLines="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:drawableStart="@drawable/ic_user"
            android:inputType="textEmailAddress"
            android:hint="@string/login"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/passwordTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textColorHint="@color/black"
            android:maxLines="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginTextField"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_password"
            android:drawableEnd="@drawable/ic_visibility"
            android:inputType="textPassword"
            android:hint="@string/password"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:textColor="@color/black"
            android:background="@drawable/button_default_background"
            android:textSize="20sp"
            android:fontFamily="sans-serif-condensed-medium"
            android:textAllCaps="false"
            android:text="@string/log_in"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordTextField"
            android:layout_marginTop="10dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/forgotPasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:textColor="@color/black"
            android:text="@string/forgot_password"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@+id/loginButton"
            app:layout_constraintEnd_toEndOf="@id/loginButton"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:textColor="@color/black"
            android:text="@string/registration"
            android:textSize="20sp"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>